# Introduction-to-libraries-with-CMake

./: .gitignore  CMakeLists.txt
cmake/: FooConfig.cmake.in
examples/: CMakeLists.txt  Main.cpp
foo/: CMakeLists.txt
foo/include/: CMakeLists.txt
foo/include/Foo/: CMakeLists.txt  Hello.h
foo/src/: CMakeLists.txt
foo/src/Foo/: CMakeLists.txt  Hello.cpp
